DuPont DevSB/src/objects/Kevlar_Response_Messages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datestamp__c</fullName>
        <label>datestamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Kevlar_Response_Messages</label>
</CustomObject>